--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,48 +1,58 @@
 {
-    // See https://go.microsoft.com/fwlink/?LinkId=733558
-    // for the documentation about the tasks.json format
     "version": "2.0.0",
     "tasks": [
         {
-            "label": "g++ build",
             "type": "shell",
-            "command": "g++",
+            "label": "C bulid for clang",
+            "command": "clang",
             "args": [
                 "-g",
-                "${fileDirname}\\${fileBasenameNoExtension}.cpp",
+                "${file}",
                 "-o",
-                "${fileDirname}\\${fileBasenameNoExtension}.exe"
+                "${fileDirname}/${fileBasenameNoExtension}"
             ],
-            "problemMatcher": ["$gcc"],
+            "options": {
+                "cwd": "${workspaceRoot}"
+            },
+            "presentation": {
+                "clear": true
+            },
             "group": {
                 "kind": "build",
                 "isDefault": true
-        }       
+            },
+            "problemMatcher": []
         },
         {
-            "label": "gcc build",
             "type": "shell",
-            "command": "gcc",
+            "label": "C++ bulid for clang++",
+            "command": "clang++",
             "args": [
                 "-g",
-                "${fileDirname}\\**.cpp",
+                "${file}",
                 "-o",
-                "${fileDirname}\\${fileBasenameNoExtension}.exe"
+                "${fileDirname}/${fileBasenameNoExtension}"
             ],
-            "problemMatcher": ["$gcc"],
-            "group": "build"
+            "options": {
+                "cwd": "${workspaceRoot}"
+            },
+            "presentation": {
+                "clear": true
+            },
+            "group": {
+                "kind": "build",
+                "isDefault": true
+            },
+            "problemMatcher": []
         },
         {
+            "type": "shell",
             "label": "execute",
-            "command": "cmd",
-            "group": {
-                "kind": "test",
-                "isDefault": true
-        },
-            "args": [
-                "/C", "${fileDirname}\\${fileBasenameNoExtension}.exe"
-            ]
-        },
-        
+            "command": "${fileDirname}/${fileBasenameNoExtension}",
+            "group": "test",
+            "presentation": {
+                "clear": true
+            }
+        }
     ]
 }
